--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
       <div class="inner clearfix">
         <section id="main-content">
           
-<h3>
-<a id="这是YunsChou的github博客" class="anchor" href="#这是YunsChou的github博客" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<!--<h3>-->
+<!--<a id="这是YunsChou的github博客" class="anchor" href="#这是YunsChou的github博客" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>-->
 
-<p>这是我的github博客主页，现在我还不太熟悉HTML/CSS/JS，希望通过学习，能搭建一个属于自己的博客系统.</p>
+<!--<p>这是我的github博客主页，现在我还不太熟悉HTML/CSS/JS，希望通过学习，能搭建一个属于自己的博客系统.</p>-->
 
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 
-<p>(github主页测试)This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>(github主页测试：为什么在默认的标签外添加内容没有用处呢)This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
