--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="main-content">
           
 <h3>
-<a id="这是YunsChou的github博客" class="anchor" href="#这是YunsChou的github博客" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="这是YunsChou的github博客" class="anchor" href="#这是YunsChou的github博客" aria-hidden="true"><span class="octicon octicon-link"></span></a>这是YunsChou的github博客.</h3>
 
 <p>这是我的github博客主页，现在我还不太熟悉HTML/CSS/JS，希望通过学习，能搭建一个属于自己的博客系统.</p>
 
