--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Yunschou.GitHub.io</h1>
+        <h1>Yunschou blog</h1>
         <h2></h2>
         <a href="https://github.com/YunsChou" class="button"><small>Follow me on</small> GitHub</a>
       </div>
