--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Yunschou.GitHub.io by YunsChou</title>
+    <title>Yunschou</title>
 
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Yunschou blog</h1>
+        <h1>Yunschou的博客</h1>
         <h2></h2>
         <a href="https://github.com/YunsChou" class="button"><small>Follow me on</small> GitHub</a>
       </div>
