--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Yunschou的博客</h1>
+        <h1>Yunschou</h1>
         <h2></h2>
         <a href="https://github.com/YunsChou" class="button"><small>Follow me on</small> GitHub</a>
       </div>
@@ -31,7 +31,7 @@
 
           
 <h3>
-<a id="这是YunsChou的github博客" class="anchor" href="#这是YunsChou的github博客" aria-hidden="true"><span class="octicon octicon-link"></span></a>这是YunsChou的github博客.</h3>
+<a id="YunsChou的github博客" class="anchor" href="#YunsChou的github博客" aria-hidden="true"><span class="octicon octicon-link"></span></a>YunsChou的github博客.</h3>
 
 <p>这是我的github博客主页，现在我还不太熟悉HTML/CSS/JS，希望通过学习，能搭建一个属于自己的博客系统.</p>
 
